--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@types/express": "4.16.0",
-    "@types/koa": "^2.0.46",
-    "@types/koa-router": "^7.0.29",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "koa": "^2.5.1",
-    "koa-router": "^7.4.0",
-    "morgan": "~1.9.0",
+    "@types/koa": "2.0.46",
+    "@types/koa-router": "7.0.29",
+    "@types/mongodb": "3.0.21",
+    "@types/mongoose": "5.0.18",
+    "cookie-parser": "1.4.3",
+    "debug": "2.6.9",
+    "koa": "2.5.1",
+    "koa-bodyparser": "^2.5.0",
+    "koa-json": "^2.0.2",
+    "koa-router": "7.4.0",
+    "mongodb": "3.0.10",
+    "mongoose": "5.1.6",
+    "morgan": "1.9.0",
     "typescript": "2.9.2"
   }
 }
